fixed around styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta
-      name="Description"
+      name="description"
       description="Book a boutique sailing vacation today!"
     />
     <meta name="theme-color" content="#000000" />
