--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.7.1/css/all.css>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
